tests/negative/typecheck/false.orng
// false.orng:5:24: error: expected a value of type `Int`, got a value of type `Bool`
// fn main() -> Int {false}
//                       ^
// 
fn main() -> Int {false}